src/test/deca/context/invalid/non_provided/bad_div_assign.deca
// Description:
//    mauvais assign
//
// Resultats:
//  erreur d'affectation

{
  int a = 1;
  float b = 2.4;
  a = a / b;
  println(a);
}
